@@ -65,6 +65,7 @@
 
     <dependency org="xerces" name="xercesImpl" rev="2.9.1" />
     <dependency org="xerces" name="xmlParserAPIs" rev="2.6.2" />
+    <dependency org="xalan" name="serializer" rev="2.7.1" />
     <dependency org="oro" name="oro" rev="2.0.8" />
 
     <dependency org="org.jdom" name="jdom" rev="1.1" conf="*->default" />
