@@ -45,6 +45,8 @@ import org.apache.commons.httpclient.NTCredentials;
 import org.apache.commons.httpclient.auth.AuthScope;
 import org.apache.commons.httpclient.params.HttpConnectionManagerParams;
 import org.apache.commons.httpclient.protocol.Protocol;
+import org.apache.commons.httpclient.protocol.ProtocolSocketFactory;
+import org.apache.commons.httpclient.protocol.SSLProtocolSocketFactory;
 
 // Nutch imports
 import org.apache.nutch.storage.WebPage;
@@ -124,7 +126,7 @@ public class Http extends HttpBase {
 	 */
 	public void setConf(Configuration conf) {
 		super.setConf(conf);
-		this.conf = conf;
+		Http.conf = conf;
 		this.maxThreadsTotal = conf.getInt("fetcher.threads.fetch", 10);
 		this.proxyUsername = conf.get("http.proxy.username", "");
 		this.proxyPassword = conf.get("http.proxy.password", "");
@@ -178,8 +180,8 @@ public class Http extends HttpBase {
 	private void configureClient() {
 
 		// Set up an HTTPS socket factory that accepts self-signed certs.
-		Protocol https = new Protocol("https",
-				new DummySSLProtocolSocketFactory(), 443);
+	  ProtocolSocketFactory factory = new SSLProtocolSocketFactory();
+		Protocol https = new Protocol("https", factory, 443);
 		Protocol.registerProtocol("https", https);
 
 		HttpConnectionManagerParams params = connectionManager.getParams();
@@ -195,7 +197,7 @@ public class Http extends HttpBase {
 		client.getParams().setConnectionManagerTimeout(timeout);
 
 		HostConfiguration hostConf = client.getHostConfiguration();
-		ArrayList headers = new ArrayList();
+		ArrayList<Header> headers = new ArrayList<Header>();
 		// Set the User Agent in the header
 		headers.add(new Header("User-Agent", userAgent));
 		// prefer English
@@ -222,7 +224,7 @@ public class Http extends HttpBase {
 						this.proxyPort, this.proxyRealm);
 
 				NTCredentials proxyCredentials = new NTCredentials(
-						this.proxyUsername, this.proxyPassword, this.agentHost,
+						this.proxyUsername, this.proxyPassword, Http.agentHost,
 						this.proxyRealm);
 
 				client.getState().setProxyCredentials(proxyAuthScope,
